Try to improve online stats but face bugs in corr

--- a/notebooks/userguide1.3.ipynb
+++ b/notebooks/userguide1.3.ipynb
@@ -55,26 +55,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from progressivis import (\n",
-    "    CSVLoader, Histogram2D, ConstDict, Heatmap, PDict,\n",
-    "    BinningIndexND, RangeQuery2d, Variable\n",
-    ")\n",
-    "import progressivis.core.aio as aio\n",
+    "from progressivis import (CSVLoader, Histogram2D, ConstDict, Heatmap, PDict,\n",
+    "                          BinningIndexND, RangeQuery2D, Variable)\n",
     "\n",
     "col_x = \"pickup_longitude\"\n",
     "col_y = \"pickup_latitude\"\n",
     "bnds_min = PDict({col_x: bounds.left, col_y: bounds.bottom})\n",
     "bnds_max = PDict({col_x: bounds.right, col_y: bounds.top})\n",
     "# Create a csv loader for the taxi data file\n",
-    "csv = CSVLoader(LARGE_TAXI_FILE, index_col=False, usecols=[col_x, col_y])\n",
+    "csv = CSVLoader(LARGE_TAXI_FILE, usecols=[col_x, col_y])\n",
     "# Create an indexing module on the csv loader output columns\n",
     "index = BinningIndexND()\n",
     "# Creates one index per numeric column\n",
     "index.input.table = csv.output.result[col_x, col_y]\n",
     "# Create a querying module\n",
-    "query = RangeQuery2d(column_x=col_x,\n",
-    "                     column_y=col_y\n",
-    "                    )\n",
+    "query = RangeQuery2D(column_x=col_x,\n",
+    "                     column_y=col_y)\n",
     "# Variable modules allow to dynamically modify their values; here, the query ranges\n",
     "var_min = Variable(name=\"var_min\")\n",
     "var_max = Variable(name=\"var_max\")\n",
@@ -106,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Scheduler added module(s): ['binning_index_nd_1', 'csv_loader_1', 'heatmap_1', 'histogram2_d_1', 'range_query2d_1', 'var_max', 'var_min']\n"
+      "# Scheduler added module(s): ['binning_index_nd_1', 'csv_loader_1', 'heatmap_1', 'histogram2_d_1', 'range_query2_d_1', 'var_max', 'var_min']\n"
      ]
     },
     {
@@ -154,12 +150,12 @@
        "<!-- csv_loader_1&#45;&gt;binning_index_nd_1 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
        "<title>csv_loader_1:s&#45;&gt;binning_index_nd_1:n</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M392,-520C392,-491.62 392,-482.12 392,-458.02\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M392,-520C392,-520 392,-458 392,-458\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"395.5,-458 392,-448 388.5,-458 395.5,-458\"/>\n",
        "</g>\n",
-       "<!-- range_query2d_1 -->\n",
+       "<!-- range_query2_d_1 -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>range_query2d_1</title>\n",
+       "<title>range_query2_d_1</title>\n",
        "<path fill=\"#ffffde\" stroke=\"#aaaa33\" d=\"M110,-260.5C110,-260.5 274,-260.5 274,-260.5 280,-260.5 286,-266.5 286,-272.5 286,-272.5 286,-305.5 286,-305.5 286,-311.5 280,-317.5 274,-317.5 274,-317.5 110,-317.5 110,-317.5 104,-317.5 98,-311.5 98,-305.5 98,-305.5 98,-272.5 98,-272.5 98,-266.5 104,-260.5 110,-260.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"118\" y=\"-305.5\" font-family=\"Helvetica,sans-Serif\" font-size=\"10.00\">lower</text>\n",
        "<polyline fill=\"none\" stroke=\"#aaaa33\" points=\"138,-298.5 138,-317.5 \"/>\n",
@@ -171,7 +167,7 @@
        "<polyline fill=\"none\" stroke=\"#aaaa33\" points=\"246,-298.5 246,-317.5 \"/>\n",
        "<text text-anchor=\"middle\" x=\"266\" y=\"-305.5\" font-family=\"Helvetica,sans-Serif\" font-size=\"10.00\">index</text>\n",
        "<polyline fill=\"none\" stroke=\"#aaaa33\" points=\"98,-298.5 286,-298.5 \"/>\n",
-       "<text text-anchor=\"middle\" x=\"192\" y=\"-286.5\" font-family=\"Helvetica,sans-Serif\" font-size=\"10.00\">range_query2d_1: RangeQuery2d</text>\n",
+       "<text text-anchor=\"middle\" x=\"192\" y=\"-286.5\" font-family=\"Helvetica,sans-Serif\" font-size=\"10.00\">range_query2_d_1: RangeQuery2D</text>\n",
        "<polyline fill=\"none\" stroke=\"#aaaa33\" points=\"98,-279.5 286,-279.5 \"/>\n",
        "<text text-anchor=\"middle\" x=\"131.5\" y=\"-267.5\" font-family=\"Helvetica,sans-Serif\" font-size=\"10.00\">result</text>\n",
        "<polyline fill=\"none\" stroke=\"#aaaa33\" points=\"165,-260.5 165,-279.5 \"/>\n",
@@ -179,23 +175,23 @@
        "<polyline fill=\"none\" stroke=\"#aaaa33\" points=\"224,-260.5 224,-279.5 \"/>\n",
        "<text text-anchor=\"middle\" x=\"255\" y=\"-267.5\" font-family=\"Helvetica,sans-Serif\" font-size=\"10.00\">max</text>\n",
        "</g>\n",
-       "<!-- binning_index_nd_1&#45;&gt;range_query2d_1 -->\n",
+       "<!-- binning_index_nd_1&#45;&gt;range_query2_d_1 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>binning_index_nd_1:s&#45;&gt;range_query2d_1:n</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M243,-390C243,-360.08 261.24,-352.99 265.23,-328.07\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"268.73,-328.24 266,-318 261.75,-327.71 268.73,-328.24\"/>\n",
+       "<title>binning_index_nd_1:s&#45;&gt;range_query2_d_1:n</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M238.75,-390C238.75,-390 238.75,-328 238.75,-328\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"242.25,-328 238.75,-318 235.25,-328 242.25,-328\"/>\n",
        "</g>\n",
-       "<!-- binning_index_nd_1&#45;&gt;range_query2d_1 -->\n",
+       "<!-- binning_index_nd_1&#45;&gt;range_query2_d_1 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>binning_index_nd_1:s&#45;&gt;range_query2d_1:n</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M482,-390C482,-262.09 210.48,-439.3 195.63,-328.08\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"199.12,-327.76 195,-318 192.13,-328.2 199.12,-327.76\"/>\n",
+       "<title>binning_index_nd_1:s&#45;&gt;range_query2_d_1:n</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M254.5,-390C254.5,-390 254.5,-328 254.5,-328\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"258,-328 254.5,-318 251,-328 258,-328\"/>\n",
        "</g>\n",
-       "<!-- binning_index_nd_1&#45;&gt;range_query2d_1 -->\n",
+       "<!-- binning_index_nd_1&#45;&gt;range_query2_d_1 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>binning_index_nd_1:s&#45;&gt;range_query2d_1:n</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M534,-390C534,-254.39 244.87,-446.63 229.62,-328.31\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"233.1,-327.77 229,-318 226.11,-328.19 233.1,-327.77\"/>\n",
+       "<title>binning_index_nd_1:s&#45;&gt;range_query2_d_1:n</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M270.25,-390C270.25,-390 270.25,-328 270.25,-328\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"273.75,-328 270.25,-318 266.75,-328 273.75,-328\"/>\n",
        "</g>\n",
        "<!-- histogram2_d_1 -->\n",
        "<g id=\"node6\" class=\"node\">\n",
@@ -211,23 +207,23 @@
        "<polyline fill=\"none\" stroke=\"#aaaa33\" points=\"119.5,-149.5 268.5,-149.5 \"/>\n",
        "<text text-anchor=\"middle\" x=\"194\" y=\"-137.5\" font-family=\"Helvetica,sans-Serif\" font-size=\"10.00\">result</text>\n",
        "</g>\n",
-       "<!-- range_query2d_1&#45;&gt;histogram2_d_1 -->\n",
+       "<!-- range_query2_d_1&#45;&gt;histogram2_d_1 -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
-       "<title>range_query2d_1:s&#45;&gt;histogram2_d_1:n</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M131,-260C131,-231.09 142.01,-222.47 144.5,-198.16\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"148.01,-198.16 145,-188 141.01,-197.82 148.01,-198.16\"/>\n",
+       "<title>range_query2_d_1:s&#45;&gt;histogram2_d_1:n</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M156.75,-260C156.75,-260 156.75,-198 156.75,-198\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"160.25,-198 156.75,-188 153.25,-198 160.25,-198\"/>\n",
        "</g>\n",
-       "<!-- range_query2d_1&#45;&gt;histogram2_d_1 -->\n",
+       "<!-- range_query2_d_1&#45;&gt;histogram2_d_1 -->\n",
        "<g id=\"edge6\" class=\"edge\">\n",
-       "<title>range_query2d_1:s&#45;&gt;histogram2_d_1:n</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M195,-260C195,-231.62 195,-222.12 195,-198.02\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"198.5,-198 195,-188 191.5,-198 198.5,-198\"/>\n",
+       "<title>range_query2_d_1:s&#45;&gt;histogram2_d_1:n</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M194,-260C194,-260 194,-198 194,-198\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"197.5,-198 194,-188 190.5,-198 197.5,-198\"/>\n",
        "</g>\n",
-       "<!-- range_query2d_1&#45;&gt;histogram2_d_1 -->\n",
+       "<!-- range_query2_d_1&#45;&gt;histogram2_d_1 -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
-       "<title>range_query2d_1:s&#45;&gt;histogram2_d_1:n</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M255,-260C255,-231.3 246.35,-222.34 244.39,-198.11\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"247.88,-197.86 244,-188 240.89,-198.13 247.88,-197.86\"/>\n",
+       "<title>range_query2_d_1:s&#45;&gt;histogram2_d_1:n</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M231.25,-260C231.25,-260 231.25,-198 231.25,-198\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"234.75,-198 231.25,-188 227.75,-198 234.75,-198\"/>\n",
        "</g>\n",
        "<!-- var_min -->\n",
        "<g id=\"node4\" class=\"node\">\n",
@@ -239,11 +235,11 @@
        "<polyline fill=\"none\" stroke=\"#aaaa33\" points=\"0,-409.5 92,-409.5 \"/>\n",
        "<text text-anchor=\"middle\" x=\"46\" y=\"-397.5\" font-family=\"Helvetica,sans-Serif\" font-size=\"10.00\">result</text>\n",
        "</g>\n",
-       "<!-- var_min&#45;&gt;range_query2d_1 -->\n",
+       "<!-- var_min&#45;&gt;range_query2_d_1 -->\n",
        "<g id=\"edge8\" class=\"edge\">\n",
-       "<title>var_min:s&#45;&gt;range_query2d_1:n</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M46,-390C46,-348.46 106.67,-360.65 116.63,-327.92\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"120.09,-328.39 118,-318 113.16,-327.43 120.09,-328.39\"/>\n",
+       "<title>var_min:s&#45;&gt;range_query2_d_1:n</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M46,-419C46,-419 104.25,-419 104.25,-419 104.25,-419 104.25,-328 104.25,-328\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"107.75,-328 104.25,-318 100.75,-328 107.75,-328\"/>\n",
        "</g>\n",
        "<!-- var_max -->\n",
        "<g id=\"node5\" class=\"node\">\n",
@@ -255,10 +251,10 @@
        "<polyline fill=\"none\" stroke=\"#aaaa33\" points=\"110.5,-409.5 205.5,-409.5 \"/>\n",
        "<text text-anchor=\"middle\" x=\"158\" y=\"-397.5\" font-family=\"Helvetica,sans-Serif\" font-size=\"10.00\">result</text>\n",
        "</g>\n",
-       "<!-- var_max&#45;&gt;range_query2d_1 -->\n",
+       "<!-- var_max&#45;&gt;range_query2_d_1 -->\n",
        "<g id=\"edge9\" class=\"edge\">\n",
-       "<title>var_max:s&#45;&gt;range_query2d_1:n</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M158,-390C158,-361.62 158,-352.12 158,-328.02\"/>\n",
+       "<title>var_max:s&#45;&gt;range_query2_d_1:n</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M158,-390C158,-390 158,-328 158,-328\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"161.5,-328 158,-318 154.5,-328 161.5,-328\"/>\n",
        "</g>\n",
        "<!-- heatmap_1 -->\n",
@@ -274,14 +270,14 @@
        "<!-- histogram2_d_1&#45;&gt;heatmap_1 -->\n",
        "<g id=\"edge10\" class=\"edge\">\n",
        "<title>histogram2_d_1:s&#45;&gt;heatmap_1:n</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M194,-130C194,-101.62 194,-92.12 194,-68.02\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M194,-130C194,-130 194,-68 194,-68\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"197.5,-68 194,-58 190.5,-68 197.5,-68\"/>\n",
        "</g>\n",
        "</g>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x7d2cfc39b5f0>"
+       "<graphviz.sources.Source at 0x73848efd2900>"
       ]
      },
      "metadata": {},
@@ -307,7 +303,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42ae0ce214144f81a3e0140d71d3617a",
+       "model_id": "62ce7fd23d0245478b1270048e79e724",
        "version_major": 2,
        "version_minor": 0
       },
@@ -334,16 +330,11 @@
      "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Leaving run loop\n"
-     ]
     }
    ],
    "source": [
+    "\n",
+    "import progressivis.core.aio as aio\n",
     "heatmap.display_notebook()\n",
     "# Start the scheduler\n",
     "csv.scheduler().task_start();\n",
@@ -356,12 +347,16 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "ed405f94-895a-47cb-97f2-b586b7d829a2",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be90bdb8a8514d908092435a60e5947a",
+       "model_id": "257ed7c5fe014f1eb01d2330aa2c03d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -480,7 +475,7 @@
     }
    ],
    "source": [
-    "csv.scheduler().task_stop()"
+    "# csv.scheduler().task_stop()"
    ]
   },
   {
@@ -508,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
