notebooks cleanup[skip ci]

--- a/notebooks/userguide1.2.ipynb
+++ b/notebooks/userguide1.2.ipynb
@@ -59,7 +59,7 @@
     "from progressivis import (CSVLoader, Histogram2D, ConstDict, Heatmap, PDict)\n",
     "\n",
     "# Create a csv loader filtering out data outside NYC\n",
-    "csv = CSVLoader(LARGE_TAXI_FILE, index_col=False, usecols=['pickup_longitude', 'pickup_latitude'])\n",
+    "csv = CSVLoader(LARGE_TAXI_FILE, usecols=['pickup_longitude', 'pickup_latitude'])\n",
     "# Create a module to compute the min value progressively\n",
     "min = ConstDict(PDict({'pickup_longitude': bounds.left, 'pickup_latitude': bounds.bottom}))\n",
     "max = ConstDict(PDict({'pickup_longitude': bounds.right, 'pickup_latitude': bounds.top}))\n",
@@ -219,7 +219,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.2"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
