--- a/notebooks/PPCAProjectionToy.ipynb
+++ b/notebooks/PPCAProjectionToy.ipynb
@@ -6,17 +6,92 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from progressivis_nb_widgets import *"
+    "from ipyprogressivis.widgets.scatterplot import Scatterplot"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting scheduler\n",
+      "# Scheduler added module(s): ['binning_index_nd_1', 'binning_index_nd_2', 'blobs_p_table_1', 'mc_histogram2_d_1', 'mc_histogram2_d_2', 'mc_scatter_plot_1', 'ppca_1', 'ppca_transformer_1', 'range_query2_d_1', 'range_query2_d_2', 'sample_1', 'variable_1', 'variable_2']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:280: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:289: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:392: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  lower_bin = int((lower - origin) // bin_w)\n",
+      "/home/poli/JDF2016/github/progressivis/progressivis/table/binning_index.py:401: RuntimeWarning: invalid value encountered in scalar floor_divide\n",
+      "  upper_bin = int((upper - origin) // bin_w)\n"
+     ]
+    }
+   ],
    "source": [
     "from progressivis import Scheduler, Every#, log_level\n",
-    "from progressivis.io import CSVLoader\n",
+    "from progressivis.io.api import CSVLoader\n",
     "from progressivis.stats.ppca import PPCA\n",
     "from progressivis.core import aio\n",
     "from progressivis.stats.blobs_table import BlobsPTable\n",
@@ -47,8 +122,8 @@
     "classes = []\n",
     "for cn in cnames:\n",
     "    classes.append({'name': cn, 'x_column': '_pc0',\n",
-    "                    'y_column': '_pc1', 'sample': ppca.reduced, 'sample_slot': cn,\n",
-    "                    'input_module': ppca.reduced, 'input_slot': 'result'})\n",
+    "                    'y_column': '_pc1', 'sample': ppca.dep.reduced, 'sample_slot': cn,\n",
+    "                    'input_module': ppca.dep.reduced, 'input_slot': 'result'})\n",
     "sp = MCScatterPlot(scheduler=s, classes=classes)\n",
     "sp.create_dependent_modules()\n",
     "for cn in cnames:\n",
@@ -67,24 +142,16 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "add2bf295809437a9f07112593a3dc6a",
+       "model_id": "325fa93b5d114237a9fe0f1b082e25e2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Scatterplot(to_hide=[])"
+       "Scatterplot()"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting scheduler\n",
-      "# Scheduler added module(s): ['blobs_table_1', 'dyn_var_1', 'dyn_var_2', 'histogram_index_1', 'histogram_index_2', 'histogram_index_3', 'histogram_index_4', 'max_1', 'max_2', 'max_3', 'max_4', 'mc_histogram2_d_1', 'mc_histogram2_d_2', 'mc_scatter_plot_1', 'merge_dict_1', 'merge_dict_2', 'merge_dict_3', 'merge_dict_4', 'min_1', 'min_2', 'min_3', 'min_4', 'ppca_1', 'ppca_transformer_1', 'range_query2d_1', 'range_query2d_2', 'sample_1']\n"
-     ]
     }
    ],
    "source": [
@@ -108,7 +175,66 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.13.2"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {
+     "325fa93b5d114237a9fe0f1b082e25e2": {
+      "buffers": [
+       {
+        "data": "",
+        "encoding": "base64",
+        "path": [
+         "hists",
+         "buffer"
+        ]
+       },
+       {
+        "data": "",
+        "encoding": "base64",
+        "path": [
+         "samples",
+         "buffer"
+        ]
+       }
+      ],
+      "model_module": "jupyter-progressivis",
+      "model_module_version": "^0.1.0",
+      "model_name": "ScatterplotModel",
+      "state": {
+       "_model_module_version": "^0.1.0",
+       "_view_module_version": "^0.1.0",
+       "data": "{}",
+       "hists": {
+        "dtype": "int32",
+        "shape": [
+         0
+        ]
+       },
+       "layout": "IPY_MODEL_7615447428a142cca2a31315e7a87202",
+       "move_point": "{}",
+       "samples": {
+        "dtype": "float32",
+        "shape": [
+         0,
+         0,
+         0
+        ]
+       },
+       "value": "{}"
+      }
+     },
+     "7615447428a142cca2a31315e7a87202": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     }
+    },
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
